# rust-analyzer-downloader

./: Cargo.toml  LICENCE  README.md
.fleet/: run.json
.github/workflows/: build.yaml  miri.yaml  release.yml  test.yaml
rad/: Cargo.toml
rad/src/: main.rs
rad/src/commands/: check.rs  command.rs  download.rs  get_versions.rs  mod.rs
src/: lib.rs  main.rs
src/cmd/: check.rs  command.rs  download.rs  get_versions.rs  mod.rs
src/commands/: check.rs  command.rs  download.rs  get_versions.rs  mod.rs
src/fs/: mod.rs
src/rust_analyzer/: version.rs
src/services/: downloader.rs  mod.rs  versions.rs
tests/: integration_tests.rs
tests/rust_analyzer_test/: mod.rs  version_test.rs
