[package]
name = "rust-analyzer-downloader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
directories = "4.0.1"
futures-util = "0.3.21"
reqwest = { version = "0.11.11", features = ["serde_json", "gzip", "stream", "async-compression", "json", "deflate"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
bytes = "1.2.1"
async-compression = { version = "0.3.14", features = ["futures-io", "tokio"] }
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing = { version = "0.1.36", features = ["async-await"] }
tracing-subscriber = { version = "0.3.15", features = ["parking_lot", "serde", "serde_json", "time", "tracing", "once_cell", "env-filter"] }
serde = { version = "1.0.143", features = ["derive"] }
time = "0.3"
async-trait = "0.1"
