[package]
name = "rad"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["rust-analyzer", "downloader", "cli-app"]
authors = ["Dusan Malusev <dusan@dusanmalusev.dev>"]
rust-version = "1.63"


[dependencies]
rust-analyzer-downloader = { path = ".." }
tracing = { version = "0.1.36", features = ["async-await"] }
tracing-subscriber = { version = "0.3.15", features = [
    "parking_lot",
    "serde",
    "serde_json",
    "time",
    "tracing",
    "once_cell",
    "env-filter",
] }
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tokio = { version = "1.20.1", features = ["full"] }
time = { version = "0.3", features = ["std", "parsing"] }
