[package]
name = "rad"
version = "2.4.0-dev"
edition = "2021"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["rust-analyzer", "downloader", "cli-app"]
authors = ["Dusan Malusev <dusan@dusanmalusev.dev>"]
rust-version = "1.63"


[dependencies]
rust-analyzer-downloader = { path = ".." }
tracing = { version = "0.1.36", features = ["async-await"] }
tracing-subscriber = { version = "0.3.15", features = [
    "parking_lot",
    "serde",
    "serde_json",
    "time",
    "tracing",
    "once_cell",
    "env-filter",
] }
tokio = { version = "1.24.2", features = ["full"] }
time = { version = "0.3", features = ["std", "parsing"] }
directories = "4.0.1"
futures-util = "0.3.21"
futures = "0.3"
thiserror = "1.0.32"
async-trait = "0.1"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", default-features = false, features = ["serde_json", "gzip", "stream", "async-compression", "json", "deflate", "rustls-tls", "trust-dns", "hyper-rustls", "tokio-rustls", "rustls", "rustls-pemfile"] }
